--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,35 @@ devtools::install_github("jennybc/regexcite")
 ```
 
 ## Usage
+### my_add
+A function designed for adding two numeric values.
+Use the `my_add()` when the input is numeric value.
+It will return error message if one or both of them are not.
 
+```{r}
+library(regexcite)
+
+my_add(1, 20)
+```
+
+The default value of the second parameter is 10, so if there's only one number given, it will add 10 to it and return the result.
+```{r}
+library(regexcite)
+
+my_add(10)
+```
+
+If one or both of the input parameter is missing, it will return NA as below.
+```{r}
+library(regexcite)
+
+my_add(NA)
+my_add(10, NA)
+my_add(NA, 10)
+```
+
+
+### str_split_one
 A fairly common task when dealing with strings is the need to split a single string into many parts.
 This is what `base::strplit()` and `stringr::str_split()` do.
 
